# profilebot

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  .spectral.yaml  AGENTS.md  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml  requirements.txt  scrum_master.md
.github/: copilot_instructions.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  user_story.md
.github/instructions/: python.instructions.md
.github/workflows/: ci.yml
config/monitoring/: prometheus.yml
config/monitoring/alertmanager/: alertmanager.yml
config/monitoring/alerts/: profilebot.yml
config/workflows/: res_id_workflow.yaml
data/: skills_blacklist.yaml  skills_dictionary.yaml
data/prompts/: section_classification.yaml
docs/: Appendice tecnica — Indexing.md  BACKLOG.md  CONTRIBUTING.md  LLM-study.md  ProfileBot_Architecture_Analysis.docx  ProfileBot_Architecture_Analysis.md  SPRINT10_CLOSING_COMMITMENT.md  SPRINT10_COMMITMENT.md  SPRINT10_TECHNICAL_RESPONSE.md  SPRINT4_COMMITMENT.md  SPRINT6_COMMITMENT.md  SPRINT6_DEV_GUIDE.md  SPRINT9_COMMITMENT.md  TEAM_STRUCTURE.md  USER_STORIES_DETAILED.md  US_CHECKLIST_TEMPLATE.md  analisi_preliminare.md  appendice_tecnica_indexing.md  availability_format_guide.md  cv_format_guide.md  github_comment_63_fase3.md  monitoring.md  openapi.yaml  ottimizzazioni.md  res_id-workflow.md  reskilling_format_guide.md  runbook.md  technical_debpt.md  technical_debt.md
docs/issues/: issue-46-updated.md  issue-ingestion-freshness-2.md  issue-ingestion-freshness.md
docs/scraper-service/: scraper-service-openapi.yaml
scripts/: analyze_unknown_skills.py  assign_all_issues.sh  cleanup_cv_chunks_payload.py  create_github_issues.sh  debug_parsed_cv.py  embed_batch.py  embed_cv.py  index_skills_dictionary.py  init_qdrant.py  load_availability.py  organize_sprint.sh  setup_branch_protection.sh  setup_github_project.sh  update_github_issues.sh  validate_skill_dictionary.py
src/: __init__.py
src/api/: main.py
src/api/v1/: __init__.py  availability.py  embeddings.py  ingestion.py  ingestion_status.py  job_match.py  metrics.py  pipeline_status.py  profile_analysis.py  reskilling.py  router.py  schemas.py  search.py
src/core/: config.py  redis_utils.py
src/core/embedding/: __init__.py  chunk_pipeline.py  pipeline.py  schemas.py  service.py
src/core/knowledge_profile/: __init__.py  builder.py  ic_sub_state.py  schemas.py  serializer.py
src/core/llm/: __init__.py  client.py  prompts.py  schemas.py
src/core/parser/: __init__.py  __main__.py  docx_parser.py  metadata_extractor.py  schemas.py  section_classifier.py  section_detector.py
src/core/search/: __init__.py  fallback.py  fusion.py  skill_dictionary_index.py
src/core/seniority/: __init__.py  calculator.py
src/core/skills/: __init__.py  blacklist.py  dictionary.py  enricher.py  extractor.py  normalizer.py  schemas.py  weight.py
src/core/workflows/: __init__.py  loader.py  patterns.py  runner.py  schemas.py
src/services/analysis/: __init__.py  schemas.py  service.py
src/services/availability/: __init__.py  cache.py  loader.py  schemas.py  service.py  tasks.py
src/services/embedding/: __init__.py  celery_app.py  freshness.py  tasks.py  worker.py
src/services/ingestion/: __init__.py  contracts.py  errors.py  profile_service.py  schemas.py  status_schemas.py  status_service.py  tasks.py
src/services/matching/: __init__.py  candidate_ranker.py  explainer.py  job_analyzer.py  matcher.py  schemas.py
src/services/pipeline/: __init__.py  schemas.py  status_service.py
src/services/qdrant/: __init__.py  client.py  collections.py  health.py
src/services/reskilling/: __init__.py  cache.py  normalizer.py  schemas.py  service.py
src/services/scraper/: __init__.py  cache.py  client.py  tasks.py
src/services/search/: __init__.py  chunk_search.py  metrics.py  multi_layer.py  schemas.py  scoring.py  search_context.py  search_context_fallback.py  skill_search.py
src/services/workflows/: __init__.py  tasks.py
src/utils/: __init__.py  circuit_breaker.py  metrics.py  normalization.py
tests/: __init__.py  test_availability_cache.py  test_availability_loader.py  test_availability_service.py  test_basic.py  test_celery_tasks.py  test_chunk_pipeline.py  test_cv_parser.py  test_e2e_pipeline.py  test_embedding_pipeline.py  test_freshness_gate.py  test_ingestion_tasks.py  test_integration_anonymous_cvs.py  test_job_matching.py  test_llm_client.py  test_llm_prompts.py  test_multi_layer_search.py  test_qdrant_collections.py  test_qdrant_connection.py  test_scraper_cache.py  test_scraper_client.py  test_scraper_tasks.py  test_search_scoring.py  test_section_classification.py  test_seniority_calculator.py  test_skill_enricher.py  test_skill_extraction.py  test_skill_search.py  test_skill_weight.py  test_workflow_loader.py  test_workflow_runner.py  test_workflow_tasks.py
tests/api/: test_availability_task_endpoints.py  test_ingestion_endpoints.py  test_ingestion_status_endpoints.py  test_pipeline_status.py  test_profile_analysis_endpoints.py  test_reskilling_endpoints.py  test_search_endpoints.py
tests/core/knowledge_profile/: test_builder.py  test_ic_sub_state.py  test_serializer.py
tests/core/parser/: test_docx_parser_cache.py
tests/fixtures/sample_cvs/: 100000_marco_rossi.docx  100001_luca_bianchi.docx  100002_giuseppe_ferrari.docx  100003_francesco_romano.docx  100004_alessandro_galli.docx  100005_andrea_costa.docx  100006_matteo_fontana.docx  100007_lorenzo_conti.docx  100008_davide_ricci.docx  100009_simone_marino.docx  README.md  cv_andrea_gialli.docx  cv_giorgio_verdi.docx  cv_italian_chars.docx  cv_lucia_bianchi.docx  cv_mario_rossi.docx  cv_minimal.docx  cv_sara_neri.docx  cv_standard.docx  cv_unstructured.docx  cv_with_tables.docx
tests/fixtures/sample_jds/: backend_python.md  data_engineer.md  devops.md  frontend_react.md  fullstack.md
tests/services/analysis/: test_profile_analysis_service.py
tests/system/: test_smoke_system.py
tests/utils/: test_circuit_breaker.py  test_metrics.py
(+21 files in other folders)
