[project]
name = "profilebot"
version = "0.1.0"
description = "AI-powered profile matching system with skill-first approach"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "Proprietary"}
authors = [
    {name = "ProfileBot Team", email = "team@profilebot.local"}
]

dependencies = [
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    "llama-index>=0.10.0",
    "llama-index-vector-stores-qdrant>=0.1.0",
    "llama-index-embeddings-openai>=0.1.0",
    "llama-index-llms-openai>=0.1.0",
    "qdrant-client>=1.7.0",
    "python-docx>=1.1.0",
    "rapidfuzz>=3.6.1",
    "pyyaml>=6.0.1",
    "pypdf>=3.17.0",
    "redis>=5.0.0",
    "rq>=1.15.0",
    "celery>=5.3.0",
    "flower>=2.0.0",
    "python-dotenv>=1.0.0",
    "httpx>=0.26.0",
    "tenacity>=8.2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.1.0",
    "black>=24.1.0",
    "isort>=5.13.0",
    "flake8>=7.0.0",
    "pylint>=3.0.0",
    "ruff>=0.1.0",
    "mypy>=1.8.0",
    "types-PyYAML>=6.0.12.20250402",
    "pre-commit>=3.6.0",
    "bandit>=1.7.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

# ============== Black ==============
[tool.black]
line-length = 100
target-version = ['py311']
include = '\.pyi?$'
extend-exclude = '''
/(
    \.git
    | \.venv
    | \.mypy_cache
    | \.ruff_cache
)/
'''

# ============== isort ==============
[tool.isort]
profile = "black"
line_length = 100
skip_gitignore = true
known_first_party = ["src"]

# ============== Ruff ==============
[tool.ruff]
target-version = "py311"
line-length = 100
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # Pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
]
ignore = [
    "E501",  # line too long (handled by black)
    "B008",  # do not perform function calls in argument defaults
]

[tool.ruff.per-file-ignores]
"__init__.py" = ["F401"]
"tests/api/test_search_endpoints.py" = ["I"]

# ============== MyPy ==============
[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
exclude = [
    "\\.venv",
    "tests",
]

# ============== Pytest ==============
[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
asyncio_mode = "auto"
addopts = "-v --tb=short"

# ============== Pylint ==============
[tool.pylint.main]
py-version = "3.11"
jobs = 0  # Auto-detect CPU cores
ignore = [".venv", "tests", "__pycache__"]

[tool.pylint.messages_control]
disable = [
    "missing-module-docstring",
    "missing-class-docstring",
    "missing-function-docstring",
    "too-few-public-methods",
    "line-too-long",  # Handled by black
]

[tool.pylint.format]
max-line-length = 100

[tool.pylint.design]
max-args = 10
max-locals = 20
