[project]
name = "profilebot"
version = "0.1.0"
description = "AI-powered profile matching system with skill-first approach"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "Proprietary"}
authors = [
    {name = "ProfileBot Team", email = "team@profilebot.local"}
]

dependencies = [
    "fastapi>=0.135.3",
    "uvicorn[standard]>=0.44.0",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.13.1",
    "openai>=2.31.0",
    "qdrant-client>=1.17.1",
    "python-docx>=1.2.0",
    "prometheus-fastapi-instrumentator>=7.1.0",
    "prometheus-client>=0.25.0",
    "rapidfuzz>=3.14.5",
    "email-validator>=2.3.0",
    "pyyaml>=6.0.3",
    "pypdf>=6.10.0",
    "redis>=7.4.0",
    "rq>=2.7.0",
    "celery>=5.6.3",
    "flower>=2.0.1",
    "python-dotenv>=1.2.2",
    "httpx>=0.28.1",
    "tenacity>=9.1.4",
]

[project.optional-dependencies]
dev = [
    "pytest>=9.0.3",
    "pytest-asyncio>=1.3.0",
    "pytest-cov>=7.1.0",
    "ruff>=0.15.10",
    "mypy>=1.20.0",
    "types-PyYAML>=6.0.12.20260408",
    "types-redis>=4.6.0.20241004",
    "pre-commit>=4.5.1",
    "bandit>=1.9.4",
    "fakeredis>=2.35.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]





# ============== Ruff ==============
[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # Pyflakes
    "I",    # isort
    "B",    # flake8-bugbear
    "C4",   # flake8-comprehensions
    "UP",   # pyupgrade
    "PL",   # pylint rules
    "RUF",  # Ruff-specific rules
]
ignore = [
    "E501",  # line too long (handled by formatter)
    "B008",  # do not perform function calls in argument defaults
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]
"tests/**/*.py" = ["PLR2004"]
"tests/api/test_search_endpoints.py" = ["I"]

# ============== MyPy ==============
[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
exclude = [
    "\\.venv",
    "tests",
]

# ============== Pytest ==============
[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
asyncio_mode = "auto"
addopts = "-v --tb=short"
